package main;

public interface LuckDirection {
    public boolean getPositiveLuck();
    public boolean getNegativeLuck();
}
