package main;

public class Mole extends SmackableCharacter{
    public Mole() {
        super();
    }

    public Mole(String name) {
        super(name);
    }
}
