package main;

abstract class Space {
}
