package main;

public interface View {
    static void showMenu() {

    }
}
